--- a/repositorio/frontend/public/index.html
+++ b/repositorio/frontend/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="logo" href="../src/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" sizes="64x64 32x32 24x24 16x16" href="./favicon.ico" />
     <meta
       name="description"
       content="Gerenciamento de hoteis e reservas"
     />
-
     <title>Easy Host</title>
   </head>
   <body>
